version 1.9.3, in progress
- New estimation command "biprobit" (bivariate probit)
- Add help text for "dpanel"
- GUI graphs: allow option of replacing the original graph
  with a zoomed view
- lrvar function: allow vector argument in place of series
- Fix bug: ensure that the main window gets updated when
  series are deleted via the console
- Fix bug: don't show an excessively long list of series in
  the dialog box for confirming deletion of series
- Fix bug: creation of matrices from data series in a loop
  which changes the sub-sample via --restrict

2010-11-03 version 1.9.2
- New command "fractint" (fractional integration test)
- The "pergm" command no longer does fractional integration
  testing as a side-effect
- The "open" command now supports http to get a data file
  (of any supported format) directly from the internet
- "kalman": allow a constant term in the state transition
  equation
- "modprint" command: allow a string literal for the second
  argument; support both comma- and space-separation of
  parameter names
- "dataset expand" command: add an "interp" modifier to use
  interpolation rather than repetition of values; also
  remove the option of going directly from annual to
  monthly frequency
- "heckit" command: enable the --robust option for QML standard
  errors and the --quiet option
- "mahal" command: add a --quiet option
- "arima" command: add new option --save-ehat
- pdf function: support the poisson and binomial distributions
  (giving the probability mass)
- New function invmills() to get the inverse Mills ratio
- New function bwfilt() to compute the Butterworth filter
  (thanks go to D.S.G. Pollock), plus GUI access under
  /Variable/Filter (time-series data only)
- New function polyfit() to obtain a polynomial trend line
- New function chowlin() to perform Chow-Lin interpolation
  of higher-frequency data
- New function varsimul() to simulate VARs
- New accessor $mnl_probs to get the estimated outcome