@@ -3538,6 +3538,11 @@ static int real_do_model (int action)
 	err = model_output(pmod, prn);
 	break;
 
+    case BIPROBIT:
+	*pmod = biprobit_model(libcmd.list, Z, datainfo, libcmd.opt, prn);
+	err = model_output(pmod, prn);
+	break;
+
     case TOBIT:
 	*pmod = tobit_model(libcmd.list, &Z, datainfo, libcmd.opt, prn);
 	err = model_output(pmod, prn);
